# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  02 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> README, arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, files/catalyst.conf, modules/builder.py,
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/generic_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot2_target.py, modules/netboot_target.py,
  modules/snapshot_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,
  modules/stage4_target.py, modules/tinderbox_target.py,
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/embedded/unmerge.sh,
  targets/grp/grp-chroot.sh, targets/grp/grp-controller.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot/netboot-controller.sh, targets/netboot/netboot-image.sh,
  targets/netboot2/netboot2-controller.sh,
  targets/netboot2/netboot2-copyfile.sh, targets/netboot2/netboot2-pkg.sh,
  targets/stage1/build.py, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage2/stage2-controller.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-controller.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-controller.sh,