@@ -6,14 +6,12 @@ class generic_sh(builder.generic):
 	"Abstract base class for all sh builders [Little-endian]"
 	def __init__(self,myspec):
 		builder.generic.__init__(self,myspec)
-		self.settings["mainarch"]="sh"
 		self.settings["CHROOT"]="chroot"
 
 class generic_sheb(builder.generic):
 	"Abstract base class for all sheb builders [Big-endian]"
 	def __init__(self,myspec):
 		builder.generic.__init__(self,myspec)
-		self.settings["mainarch"]="sh"
 		self.settings["CHROOT"]="chroot"
 
 class arch_sh(generic_sh):
